--- a/WpfApp2/L2RBot.csproj
+++ b/WpfApp2/L2RBot.csproj
@@ -86,6 +86,10 @@
     <Compile Include="ClassFiles\Mouse.cs" />
     <Compile Include="ClassFiles\Pixel.cs" />
     <Compile Include="ClassFiles\QuestHelper.cs" />
+    <Compile Include="ClassFiles\Quests\DailyDungeon.cs" />
+    <Compile Include="ClassFiles\Quests\Quest.cs" />
+    <Compile Include="ClassFiles\Quests\Scroll.cs" />
+    <Compile Include="ClassFiles\Quests\Weekly.cs" />
     <Compile Include="ClassFiles\Screen.cs" />
     <Compile Include="ClassFiles\ScrollQuest.cs" />
     <Compile Include="ClassFiles\User32.cs" />
