Weekly.cs updated due to a UI variation when Main Quest has bene completed.

--- a/WpfApp2/L2RBot.csproj
+++ b/WpfApp2/L2RBot.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ClassFiles\Pixel.cs" />
     <Compile Include="ClassFiles\QuestHelper.cs" />
     <Compile Include="ClassFiles\Quests\DailyDungeon.cs" />
+    <Compile Include="ClassFiles\Quests\Main.cs" />
     <Compile Include="ClassFiles\Quests\Quest.cs" />
     <Compile Include="ClassFiles\Quests\Scroll.cs" />
     <Compile Include="ClassFiles\Quests\Weekly.cs" />
