Added TOI and Exp Dungeon Quest features, Resolved UI bugs regarding closing and button states, repaired Weekly and Scroll Quest functionality to account for Main Quest Completion UI variances.

--- a/WpfApp2/L2RBot.csproj
+++ b/WpfApp2/L2RBot.csproj
@@ -86,9 +86,11 @@
     <Compile Include="ClassFiles\Pixel.cs" />
     <Compile Include="ClassFiles\QuestHelper.cs" />
     <Compile Include="ClassFiles\Quests\DailyDungeon.cs" />
+    <Compile Include="ClassFiles\Quests\ExpDungeon.cs" />
     <Compile Include="ClassFiles\Quests\Main.cs" />
     <Compile Include="ClassFiles\Quests\Quest.cs" />
     <Compile Include="ClassFiles\Quests\Scroll.cs" />
+    <Compile Include="ClassFiles\Quests\TowerOfInsoloence.cs" />
     <Compile Include="ClassFiles\Quests\Weekly.cs" />
     <Compile Include="ClassFiles\Screen.cs" />
     <Compile Include="ClassFiles\User32.cs" />
