--- a/WpfApp2/L2RBot.csproj
+++ b/WpfApp2/L2RBot.csproj
@@ -85,15 +85,17 @@
     <Compile Include="ClassFiles\Mouse.cs" />
     <Compile Include="ClassFiles\Pixel.cs" />
     <Compile Include="ClassFiles\QuestHelper.cs" />
+    <Compile Include="ClassFiles\Quests\AltarOfMadness.cs" />
     <Compile Include="ClassFiles\Quests\DailyDungeon.cs" />
     <Compile Include="ClassFiles\Quests\ExpDungeon.cs" />
     <Compile Include="ClassFiles\Quests\Main.cs" />
     <Compile Include="ClassFiles\Quests\Quest.cs" />
     <Compile Include="ClassFiles\Quests\Scroll.cs" />
     <Compile Include="ClassFiles\Quests\TowerOfInsoloence.cs" />
-    <Compile Include="ClassFiles\Quests\sdwasdw.cs" />
+    <Compile Include="ClassFiles\Quests\Weekly.cs" />
     <Compile Include="ClassFiles\Screen.cs" />
     <Compile Include="ClassFiles\User32.cs" />
+    <Compile Include="Common\Colors.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -138,6 +140,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Common\Enum\" />
     <Folder Include="_bin\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
