--- a/WpfApp2/L2RBot.csproj
+++ b/WpfApp2/L2RBot.csproj
@@ -122,13 +122,13 @@
     <Compile Include="ClassFiles\Mouse.cs" />
     <Compile Include="ClassFiles\Pixel.cs" />
     <Compile Include="ClassFiles\Quests\QuestHelper.cs" />
-    <Compile Include="ClassFiles\Quests\AltarOfMadness.cs" />
-    <Compile Include="ClassFiles\Quests\DailyDungeon.cs" />
-    <Compile Include="ClassFiles\Quests\ExpDungeon.cs" />
+    <Compile Include="ClassFiles\Quests\Dungeons\AltarOfMadness.cs" />
+    <Compile Include="ClassFiles\Quests\Dungeons\DailyDungeon.cs" />
+    <Compile Include="ClassFiles\Quests\Dungeons\ExpDungeon.cs" />
     <Compile Include="ClassFiles\Quests\Main.cs" />
     <Compile Include="ClassFiles\Quests\Quest.cs" />
     <Compile Include="ClassFiles\Quests\Scroll.cs" />
-    <Compile Include="ClassFiles\Quests\TowerOfInsoloence.cs" />
+    <Compile Include="ClassFiles\Quests\Dungeons\TowerOfInsolence.cs" />
     <Compile Include="ClassFiles\Quests\Weekly.cs" />
     <Compile Include="ClassFiles\Screen.cs" />
     <Compile Include="ClassFiles\User32.cs" />
