--- a/WpfApp2/packages.config
+++ b/WpfApp2/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Camalot.Common" version="1.0.5937.17275" targetFramework="net452" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net452" developmentDependency="true" />
   <package id="Fody" version="2.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Managed.Adb" version="2.0.131.13916" targetFramework="net452" />
+  <package id="morelinq" version="1.2.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net452" />
 </packages>
